rgw: avoid expiration early triggering caused by overflow

Fixes: https://tracker.ceph.com/issues/42634

Signed-off-by: jiahuizeng <jhzeng93@foxmail.com>